Fix header on mobile devices and disable scroll when a game has already started

--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,8 @@ button {
     --card-width: 80px;
     --card-height: 124px;
     --key-size: 35px;
+    --logo-width: 90px;
+    --logo-height: 66px;
   }
 }
 
