--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -92,12 +92,20 @@
   }
 
   .header > div:nth-child(2) {
-    grid-column: 3;
-    grid-row: 1;
+    grid-column: 2;
+    grid-row: 2;
   }
 
   .header > div:nth-child(3) {
     grid-column: 3;
-    grid-row: 2;
+    grid-row: 1;
+  }
+
+  .header .header_menu {
+    gap: 1rem;
+  }
+
+  .header .header_menu span {
+    font-size: 30px;
   }
 }
